# samenwijzer

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.fastapi  INSTRUCTIONS.md  LICENSE  README.md  fly.toml  gebruikers.txt  pyproject.toml
app/: config.toml  (+2 more)
validatie_samenwijzer/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  gebruikers.txt  pyproject.toml  start.sh
validatie_samenwijzer/.devcontainer/: devcontainer.json
validatie_samenwijzer/.streamlit/: config.toml
validatie_samenwijzer/app/: main.py
validatie_samenwijzer/app/pages/: 0_oer_vraag.py  1_oer_assistent.py  2_mijn_oer.py  3_mijn_voortgang.py  4_mijn_studenten.py  5_begeleidingssessie.py  9_beheer.py  uitloggen.py
validatie_samenwijzer/app_fastapi/: auth.py  context.py  data.py  main.py  sessie.py
validatie_samenwijzer/app_fastapi/static/: app.css  app.js  chat.js
validatie_samenwijzer/app_fastapi/templates/: base.html  beheer.html  index.html  login.html  mentor_sessie.html  mentor_studenten.html  student_assistent.html  studiegids.html  toegang.html  voortgang.html
validatie_samenwijzer/data/skills/: 23030.json  23110.json  23119.json  23122.json  23132.json  23186.json  23243.json  23244.json  23251.json  23265.json  23284.json  23285.json  23286.json  23296.json  23301.json  23310.json  23322.json  23353.json  23366.json  23384.json  23385.json  23399.json  23415.json  23428.json  25010.json  25011.json  25017.json  25020.json  25099.json  25102.json  25103.json  25104.json  25105.json  25118.json  25119.json  25122.json  25124.json  25125.json  25128.json  25130.json  (+333 more)
validatie_samenwijzer/docs/: ARCHITECTURE.md
validatie_samenwijzer/docs/mockups/: oer-vraag-landing.html
validatie_samenwijzer/docs/plans/: 2026-06-02-instellingsbrede-bron.md  2026-06-03-instellingen-kwic-graafschap-curio.md  2026-06-04-deployment-fly-haalbaarheid.md  2026-06-04-fase2-history-purge-runbook.md  2026-06-04-opslagstrategie-data-en-deployment.md  (+17 more)
validatie_samenwijzer/presentatie/: 260520_validatie_samenwijzer.md  README.md  package-lock.json  package.json  start.sh
validatie_samenwijzer/scripts/: bootstrap.sh  build_skills_taxonomie.py  check_bootstrap.sh  convert_kwalificatiedossiers_md.py  convert_oers_markdown.py  download_kwalificatiedossiers.py  fetch_deltion.py  fix_opleiding_namen.py  meet_token_kosten.py  push_oeren.sh  rename_oers.py  seed_bulk.py  seed_rebuild_students.py  sync_kwalificatiedossiers.sh  sync_oeren.sh  verwerk_oers.sh
validatie_samenwijzer/seed/: bulk_seed.py  rebuild_students.py  seed.py
validatie_samenwijzer/tests/: conftest.py  test_ai.py  test_auth.py  test_chat.py  test_competentnl_bron.py  test_db.py  test_fastapi_poc.py  test_ingest.py  test_instelling_lijsten_sync.py  test_refresh_fallbacks.py  test_rename_oers.py  test_skills_bron.py  test_styles.py  test_sync_afgeleid.py  test_vector_store.py  test_watcher.py
validatie_samenwijzer/tools/: rename_oers.py  verwerk_oers.sh
(+1373 files in other folders)
