[project]
name = "validatie-samenwijzer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.45.0",
    "httpx>=0.27",
    "markitdown[pdf]>=0.1.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "watchdog>=4.0.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
]

[project.scripts]
ingest = "validatie_samenwijzer.ingest:main"
watcher = "validatie_samenwijzer.watcher:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validatie_samenwijzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
